--- a/test/style.css
+++ b/test/style.css
@@ -1,11 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    font-size: 14px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
+    font-size: 30px;
 }
 
 .status-pending {
@@ -23,5 +18,5 @@ body {
 }
 
 #results {
-    background-color: cadetblue
+    border: 1px solid black;
 }
