--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ body {
     background-color: var(--background-color);
 }
 
+label:has(input[type="checkbox"]) {
+    user-select: none;
+}
+
 .test-status.pending {
     color: var(--black);
     background-color: var(--yellow);
@@ -47,11 +51,16 @@ body {
     text-decoration: underline;
 }
 
+.suite,
 .test,
 #results {
     border: 1px solid var(--color)
 }
 
-.suite>.test {
+.suite>div>.test {
     border: none;
+}
+
+.hidden {
+    display: none;
 }
